style.css
body {
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', Helvetica, sans-serif;
  font-size: 17px;
}

header {
  background-color: #0C1B2D;
  border-bottom: 1px solid #000;
}

.header {
  display: flex;
  align-items: center;
  padding: 10px 0px;
}

#logo {
  height: 50px;
  margin-right: 15px;
}

.metainfo {
  color: #ddd;
}

.page_article .metainfo {
  margin-bottom: -20px;
}

.page_article img {
    max-width: 100%;
}

header p,
header p a {
  font-weight: normal;
  text-decoration: none;
  font-size: 16px;
  color: #8B96A5;
}

header p a,
header p a:hover {
  color: #4DDD74;
}

h1, h2, h3 {
  font-weight: 400;
  font-family: 'Noto Serif', serif;
}

h1 a {
  color: black;
  text-decoration: none;
  font-size: 38px;
  margin-bottom: 15px;
  line-height: 1.3em;
  font-weight: normal;
  padding: 1px 0px;
}

h1 a:hover {
  color: #1b8ff8;
  text-decoration: none;
}

h2 {
  color: #6B757C;
  font-size: 28px;
  margin-top: 1em;
  margin-bottom: 0.25em;
}

h3 {
  color: #6B757C;
}

h2.subtitle {
  margin-top: 0px;
  margin-bottom: 2em;
}

a, a:link {
  color: #0090FF;
  text-decoration: none;
  border: none;
  }
  a:hover {
    text-decoration: underline;
}

li {
  margin-bottom: 0.5em;
}

.disqus_wrapper {
  padding: 30px;
  background-color: #EFF2F4;
  border-top: 2px solid #E5E8EA;
}

#disqus_thread, .disqus_wrapper h2 {
}

.amazon-thumbnail img {
  height: 250px;
  min-width: 160px;
  background-color: #1c222e;
  border: 2px solid #1c222e;
  margin-bottom: 5px;
}

.home_article {
  margin-top: 30px;
  padding-bottom: 13px;
  border-bottom: 1px solid #EFF2F4;
}

a.home_image {
  display: block;
  overflow: hidden;
  margin-top: 15px;
  margin-bottom: 0px;
}

.home_image img {
  width: 100%;
  border: 2px solid #1c222e;
}

@media (min-width: 992px) {
  .articles-wrapper {
    margin-right: 0px;
    padding-right: 30px;
    border-right: 1px solid #EFF2F4;
  }
}

.article-footer {
  margin: 3em 0;
  border-top: 1px solid #EFF2F4;
}

.article_image {
  width: 100%;
  border: 2px solid #1c222e;
}

.related_article {
  display: block;
  margin-bottom: 30px;
}

.related_article img {
  width: 100%;
  border: 2px solid #1c222e;
  margin-bottom: 10px;
}

#all-sidebar {
  color: #999;
  padding-top: 90px;
}
#all-sidebar h4 {
  font-weight: normal;
}

